refactor findArticleByWriterIds method to handle null or empty writerIds and group articles by writerId